--- a/html_flask.html
+++ b/html_flask.html
@@ -34,7 +34,7 @@ Choose your classifier :
 <select name="classifier">
     <option value="KNN">KNN</option>
     <option value="Logistic regression">Logistic regression</option>
-    <option value="svm">SVM</option>
+    <option value="SVM">SVM</option>
     <option value="naive bayes">naive bayes</option>
     
 </select>
